# http-info-bot

./: .gitignore  README.md  example.secrets.toml  pyproject.toml
http_info_bot/: main.py
tests/: test_http_info_bot.py
